# chatPDF-mcp

./: README.md  app.py  main.py  pyproject.toml  requirments.txt
agents/: ingestion_agent.py  llm_response_agent.py  retrival_agent.py
mcp/: protocol.py
utils/: loader.py
